...
  "emails.certificate.hello": "السلام،",
  "emails.certificate.body": "السرتافيكة ديال الضومين ديالك '{{domain}}' ما قدّاتش تجينيرا. هادي هي المحاولة نمرة {{attempt}}, السبب ديال هاد الفشل هو: {{error}}",
  "emails.certificate.footer": "السرتافيكة الفايتة ديالك غاتبقى مزيانة لمدة  30 يوم من عند أول فشل. كانشجعوك بزاف أنك تبقشش فهاد الموضوع, وا إلّا الضومين ديالك ما غايبقاش خدّام فيه الـ SSL.",
  "emails.certificate.thanks": "شكرا،",
  "emails.certificate.signature": "فرقة {{project}}",
  "emails.sessionAlert.subject": "{{project}} Session Alert",
  "emails.sessionAlert.hello": "Hello,",
  "emails.sessionAlert.body": "We detected a new session on your {{project}} account. If this wasn't you, you can safely ignore this email.",
  "emails.sessionAlert.listDevice": "Device: {{device}}",
  "emails.sessionAlert.listIpAddress": "IP Address: {{ipAddress}}",
  "emails.sessionAlert.listCountry": "Country: {{country}}",
  "emails.sessionAlert.footer": "If you did not initiate this session, you can safely ignore this email.",
  "emails.sessionAlert.thanks": "Thanks,",
...
